* DistUpgrade/DistUpgrade.cfg.lucid:   - update KernelRemoval/Version to match lucids kernel

--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,8 @@ update-manager (1:0.156.9) UNRELEASED; urgency=low
       libapt-{pkg,inst} and release-upgrader-python-apt from the CD
   * DistUpgrade/DistUpgrade.cfg:
     - update KernelRemoval/Version to match oneirics kernel
+  * DistUpgrade/DistUpgrade.cfg.lucid:
+    - update KernelRemoval/Version to match lucids kernel
   
   [ Brian Murray ]
   * debian/source_update-manager.py: pass if attach_gsettings fails like on a
