* data/release-upgrades:   - set releae upgrades default to "lts"

--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,8 @@ update-manager (1:0.156.9) UNRELEASED; urgency=low
     - update KernelRemoval/Version to match oneirics kernel
   * DistUpgrade/DistUpgrade.cfg.lucid:
     - update KernelRemoval/Version to match lucids kernel
+  * data/release-upgrades:
+    - set releae upgrades default to "lts"
   
   [ Brian Murray ]
   * debian/source_update-manager.py: pass if attach_gsettings fails like on a
