--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.9) UNRELEASED; urgency=low
+update-manager (1:0.156.9) precise; urgency=low
 
   [ Michael Vogt ]
   * DistUpgrade/DistUpgradeController.py:
@@ -19,7 +19,7 @@ update-manager (1:0.156.9) UNRELEASED; urgency=low
   * lp:~kelemeng/update-manager/bug957552:
     - Mark two accessible descriptions for translation. LP: #957552
   
- -- Brian Murray <brian@ubuntu.com>  Fri, 16 Mar 2012 15:36:17 -0700
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 20 Mar 2012 17:35:34 +0100
 
 update-manager (1:0.156.8) precise; urgency=low
 
