* UpdateManager/Core/MyCache.py:   - do not attempt to download changelogs from https locations if     the uri requires credentials, thanks to Pat McGowan

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.156.10) UNRELEASED; urgency=low
+
+  * UpdateManager/Core/MyCache.py:
+    - do not attempt to download changelogs from https locations if
+      the uri requires credentials, thanks to Pat McGowan
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Mar 2012 09:32:11 +0100
+
 update-manager (1:0.156.9) precise; urgency=low
 
   [ Michael Vogt ]
