--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.10) UNRELEASED; urgency=low
+update-manager (1:0.156.10) precise; urgency=low
 
   [ Michael Vogt ]
   * UpdateManager/Core/MyCache.py:
@@ -10,7 +10,7 @@ update-manager (1:0.156.10) UNRELEASED; urgency=low
     - Check that pkg.candidate.uri is not None when looking for changelogs
       (LP: #839986).
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 22 Mar 2012 09:32:11 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 27 Mar 2012 13:44:40 +0200
 
 update-manager (1:0.156.9) precise; urgency=low
 
