--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.11) UNRELEASED; urgency=low
+
+  * DistUpgrade/DistUpgrade.cfg.lucid:
+    - add in a missing backported package (LP: #969182)
+
+ -- Brian Murray <brian@ubuntu.com>  Fri, 30 Mar 2012 14:19:52 -0700
+
 update-manager (1:0.156.10) precise; urgency=low
 
   [ Michael Vogt ]
