* DistUpgrade/Distupgrade.py:   - workaround issue regarding removing selections, thanks to sampo555 for     the patch (LP: #945536)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,12 @@
-update-manager (1:0.156.11) UNRELEASED; urgency=low
+update-manager (1:0.156.11) precise; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg.lucid:
     - add in a missing backported package (LP: #969182)
+  * DistUpgrade/Distupgrade.py:
+    - workaround issue regarding removing selections, thanks to sampo555 for
+      the patch (LP: #945536)
 
- -- Brian Murray <brian@ubuntu.com>  Fri, 30 Mar 2012 14:19:52 -0700
+ -- Brian Murray <brian@ubuntu.com>  Thu, 12 Apr 2012 11:02:52 -0700
 
 update-manager (1:0.156.10) precise; urgency=low
 
