update changelog to make release team happy

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ update-manager (1:0.156.11) precise; urgency=low
   * DistUpgrade/Distupgrade.py:
     - workaround issue regarding removing selections, thanks to sampo555 for
       the patch (LP: #945536)
+  * Automatic update of mirrors, demoted packages and of included source
+    packages: base-installer
 
  -- Brian Murray <brian@ubuntu.com>  Thu, 12 Apr 2012 11:02:52 -0700
 
