* data/gtkbuilder/UpgradePromptDialog.ui:   - Remove has_separator property from dialog_really_do_not_upgrade     (deprecated in GTK+ 2.22, removed in 3.0).

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.156.12) UNRELEASED; urgency=low
+
+  * data/gtkbuilder/UpgradePromptDialog.ui:
+    - Remove has_separator property from dialog_really_do_not_upgrade
+      (deprecated in GTK+ 2.22, removed in 3.0).
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2012 23:33:18 +0100
+
 update-manager (1:0.156.11) precise; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg.lucid:
