--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,9 @@ update-manager (1:0.156.12) UNRELEASED; urgency=low
   * data/gtkbuilder/UpgradePromptDialog.ui:
     - Remove has_separator property from dialog_really_do_not_upgrade
       (deprecated in GTK+ 2.22, removed in 3.0).
+  * debian/control:
+    - Restore gksu dependency, needed by e.g. check-new-release-gtk
+      (LP: #980637).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2012 23:33:18 +0100
 
