Improve the error message when a package cannot be located after updating, probably caused by an overloaded mirror. (LP: #873468)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.12) precise; urgency=low
+
+  * Improve the error message when a package cannot be located after
+    updating, probably caused by an overloaded mirror. (LP: #873468)
+
+ -- Barry Warsaw <barry@ubuntu.com>  Tue, 17 Apr 2012 14:28:21 -0400
+
 update-manager (1:0.156.11) precise; urgency=low
 
   * DistUpgrade/DistUpgrade.cfg.lucid:
