- updated to the latest launchpad (LP: #628157) * DistUpgrade/DistUpgradeController.py:   - remove backports sources.list.d file again after its no     longer needed (LP: #973717)

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,7 +13,10 @@ update-manager (1:0.156.12) UNRELEASED; urgency=low
     - disconnect model and clear store before rebuilding the cache,
       thanks to Colin Watson
   * po/*.po:
-    - updated to the latest launchpad
+    - updated to the latest launchpad (LP: #628157)
+  * DistUpgrade/DistUpgradeController.py:
+    - remove backports sources.list.d file again after its no
+      longer needed (LP: #973717)
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2012 23:33:18 +0100
 
