remove skype from the removal blacklist

--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ update-manager (1:0.156.12) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgrade.cfg.lucid:
     - release-upgrader-libapt-pkg-dev is not needed for the upgrade
       itself
+  * remove skype from the removal blacklist
 
  -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2012 23:33:18 +0100
 
