--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.12) UNRELEASED; urgency=low
+update-manager (1:0.156.12) precise; urgency=low
 
   [ Colin Watson ]
   * data/gtkbuilder/UpgradePromptDialog.ui:
@@ -25,7 +25,7 @@ update-manager (1:0.156.12) UNRELEASED; urgency=low
       itself
   * remove skype from the removal blacklist
 
- -- Colin Watson <cjwatson@ubuntu.com>  Fri, 13 Apr 2012 23:33:18 +0100
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 17 Apr 2012 21:27:54 +0200
 
 update-manager (1:0.156.11) precise; urgency=low
 
