* debian/control:   - fix description for update-manager-kde (LP: #984906),     thanks to Scott Kitterman

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.156.14) UNRELEASED; urgency=low
+
+  * debian/control:
+    - fix description for update-manager-kde (LP: #984906),
+      thanks to Scott Kitterman
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Apr 2012 15:53:01 +0200
+
 update-manager (1:0.156.13) precise; urgency=low
 
   * Improve the error message used when a package cannot be located after
