--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ update-manager (1:0.156.14) UNRELEASED; urgency=low
   * debian/control:
     - fix description for update-manager-kde (LP: #984906),
       thanks to Scott Kitterman
+  * DistUpgrade/DistUpgradeController.py:
+    - do not set PYCENTRAL_NO_DPKG_QUERY (LP: #986233)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Apr 2012 15:53:01 +0200
 
