--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.156.14) UNRELEASED; urgency=low
+update-manager (1:0.156.14) precise; urgency=low
 
   * debian/control:
     - fix description for update-manager-kde (LP: #984906),
@@ -6,7 +6,7 @@ update-manager (1:0.156.14) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeController.py:
     - do not set PYCENTRAL_NO_DPKG_QUERY (LP: #986233)
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 18 Apr 2012 15:53:01 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 20 Apr 2012 18:02:51 +0200
 
 update-manager (1:0.156.13) precise; urgency=low
 
