--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.14.1) UNRELEASEDprecise-proposed; urgency=low
+
+  * DistUpgrade/ReleaseAnnouncement:
+    - add "LTS" to the version
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Apr 2012 13:21:59 +0200
+
 update-manager (1:0.156.14) precise; urgency=low
 
   * debian/control:
