--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,9 @@
-update-manager (1:0.156.14.1) UNRELEASEDprecise-proposed; urgency=low
+update-manager (1:0.156.14.1) precise-proposed; urgency=low
 
   * DistUpgrade/ReleaseAnnouncement:
     - add "LTS" to the version
 
- -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Apr 2012 13:21:59 +0200
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 26 Apr 2012 13:59:24 +0200
 
 update-manager (1:0.156.14) precise; urgency=low
 
