--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+update-manager (1:0.157) UNRELEASED; urgency=low
+
+  * Use Python 3-style print functions.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
+
 update-manager (1:0.156.14.1) precise-proposed; urgency=low
 
   * DistUpgrade/ReleaseAnnouncement:
