Use "except Exception as e" syntax rather than the old-style "except Exception, e".

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 update-manager (1:0.157) UNRELEASED; urgency=low
 
   * Use Python 3-style print functions.
+  * Use "except Exception as e" syntax rather than the old-style "except
+    Exception, e".
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
