Use string methods rather than functions from the string module.

--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use "except Exception as e" syntax rather than the old-style "except
     Exception, e".
   * Fix a few assorted pyflakes warnings.
+  * Use string methods rather than functions from the string module.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
