Replace most uses of filter and map with list comprehensions or for loops.

--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     Exception, e".
   * Fix a few assorted pyflakes warnings.
   * Use string methods rather than functions from the string module.
+  * Replace most uses of filter and map with list comprehensions or for
+    loops.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
