--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use string methods rather than functions from the string module.
   * Replace most uses of filter and map with list comprehensions or for
     loops.
+  * Use open() rather than file().
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
