--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Replace most uses of filter and map with list comprehensions or for
     loops.
   * Use open() rather than file().
+  * Use Python 3 renaming of ConfigParser if available.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
