Use "raise Exception(value)" syntax rather than the old-style "raise Exception, value".

--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,8 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     loops.
   * Use open() rather than file().
   * Use Python 3 renaming of ConfigParser if available.
+  * Use "raise Exception(value)" syntax rather than the old-style "raise
+    Exception, value".
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
