Remove duplicate imports of os.path; 'import os' is enough.

--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use Python 3 renaming of ConfigParser if available.
   * Use "raise Exception(value)" syntax rather than the old-style "raise
     Exception, value".
+  * Remove duplicate imports of os.path; 'import os' is enough.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
