Use Python 3 renamings of urllib, urllib2, and urlparse if available.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use "raise Exception(value)" syntax rather than the old-style "raise
     Exception, value".
   * Remove duplicate imports of os.path; 'import os' is enough.
+  * Use Python 3 renamings of urllib, urllib2, and urlparse if available.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
