Remove all hard tabs from Python code.  Python 3 no longer tolerates mixing tabs and spaces for indentation.

--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,8 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     Exception, value".
   * Remove duplicate imports of os.path; 'import os' is enough.
   * Use Python 3 renamings of urllib, urllib2, and urlparse if available.
+  * Remove all hard tabs from Python code.  Python 3 no longer tolerates
+    mixing tabs and spaces for indentation.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
