Use email.utils.parsedate (with a DST handling correction) rather than the long-deprecated rfc822.parsedate.

--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Remove all hard tabs from Python code.  Python 3 no longer tolerates
     mixing tabs and spaces for indentation.
   * Use Python 3 renaming of httplib if available.
+  * Use email.utils.parsedate (with a DST handling correction) rather than
+    the long-deprecated rfc822.parsedate.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
