Use the threading module instead of thread (renamed to _thread in Python 3).

--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,8 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use Python 3 renaming of httplib if available.
   * Use email.utils.parsedate (with a DST handling correction) rather than
     the long-deprecated rfc822.parsedate.
+  * Use the threading module instead of thread (renamed to _thread in Python
+    3).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
