Tell Python to use absolute imports by default, and annotate cases where we need relative imports.

--- a/debian/changelog
+++ b/debian/changelog
@@ -20,6 +20,8 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     the long-deprecated rfc822.parsedate.
   * Use the threading module instead of thread (renamed to _thread in Python
     3).
+  * Tell Python to use absolute imports by default, and annotate cases where
+    we need relative imports.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
