Update test_proxy to use gsettings and the python-apt 0.8 API.

--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     3).
   * Tell Python to use absolute imports by default, and annotate cases where
     we need relative imports.
+  * Update test_proxy to use gsettings and the python-apt 0.8 API.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
