Drop use of deprecated statvfs module.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     we need relative imports.
   * Update test_proxy to use gsettings and the python-apt 0.8 API.
   * Use new-style octal literals.
+  * Drop use of deprecated statvfs module.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
