--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Update test_proxy to use gsettings and the python-apt 0.8 API.
   * Use new-style octal literals.
   * Drop use of deprecated statvfs module.
+  * Use Python 3 renamings of BaseHTTPServer and SocketServer if available.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
