--- a/debian/changelog
+++ b/debian/changelog
@@ -26,6 +26,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use new-style octal literals.
   * Drop use of deprecated statvfs module.
   * Use Python 3 renamings of BaseHTTPServer and SocketServer if available.
+  * Modernise use of unittest methods.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
