Fix several ResourceWarnings with Python 3.

--- a/debian/changelog
+++ b/debian/changelog
@@ -28,6 +28,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use Python 3 renamings of BaseHTTPServer and SocketServer if available.
   * Modernise use of unittest methods.
   * Use python-apt 0.8 API spellings of apt_pkg.config methods.
+  * Fix several ResourceWarnings with Python 3.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
