Port to python-apt 0.8 progress classes.

--- a/debian/changelog
+++ b/debian/changelog
@@ -29,6 +29,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Modernise use of unittest methods.
   * Use python-apt 0.8 API spellings of apt_pkg.config methods.
   * Fix several ResourceWarnings with Python 3.
+  * Port to python-apt 0.8 progress classes.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
