Since python-gnupginterface is not likely to be ported to Python 3, and since it's almost just as easy to call gpg directly via subprocess, do so.

--- a/debian/changelog
+++ b/debian/changelog
@@ -30,6 +30,9 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Use python-apt 0.8 API spellings of apt_pkg.config methods.
   * Fix several ResourceWarnings with Python 3.
   * Port to python-apt 0.8 progress classes.
+  * Since python-gnupginterface is not likely to be ported to Python 3, and
+    since it's almost just as easy to call gpg directly via subprocess, do
+    so.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
