Use gettext if ugettext does not exist (as in Python 3).

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,7 @@ update-manager (1:0.157) UNRELEASED; urgency=low
   * Since python-gnupginterface is not likely to be ported to Python 3, and
     since it's almost just as easy to call gpg directly via subprocess, do
     so.
+  * Use gettext if ugettext does not exist (as in Python 3).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
