fix automatic expand of the terminal if no activity happend for >300s (LP: #993190)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.156.14.2) precise-proposed; urgency=low
+
+  * fix automatic expand of the terminal if no activity happend
+    for >300s (LP: #993190)
+
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 04 May 2012 11:11:51 -0700
+
 update-manager (1:0.156.14.1) precise-proposed; urgency=low
 
   * DistUpgrade/ReleaseAnnouncement:
