* DistUpgrade/*.py:   - update for the 12.04 -> 12.10 upgrade

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-update-manager (1:0.157) UNRELEASED; urgency=low
+update-manager (1:0.160) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Use Python 3-style print functions.
   * Use "except Exception as e" syntax rather than the old-style "except
     Exception, e".
@@ -34,6 +35,10 @@ update-manager (1:0.157) UNRELEASED; urgency=low
     since it's almost just as easy to call gpg directly via subprocess, do
     so.
   * Use gettext if ugettext does not exist (as in Python 3).
+  
+  [ Michael Vogt ]
+  * DistUpgrade/*.py:
+    - update for the 12.04 -> 12.10 upgrade
 
  -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
 
