update several strings to match the software updater spec; most notably, rename from Update Manager to Software Updater

--- a/Janitor/README
+++ b/Janitor/README
@@ -8,11 +8,11 @@ possible to port to other Unix-like operating systems.
 
 This is the core of the program: the plugin manager, and (some of) the
 plugins. The user interface and some other things are in a separate
-source tree. This is because Ubuntu's and Debian's Update Manager
-program will be using Computer Janitor. Since Update Manager is used
+source tree. This is because Ubuntu's and Debian's Software Updater
+program will be using Computer Janitor. Since Software Updater is used
 also to upgrade from operating system release to release, it needs to
 keep its external dependencies to a minimum. Thus, the core of Computer
-Janitor is incorporated into Update Manager, and the upper layers will
+Janitor is incorporated into Software Updater, and the upper layers will
 remain as a separate package.
 
 
