--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Update Manager for apt
-----------------------
+Software Updater for apt
+------------------------
 
 This is an application which lets you manage available updates for your
 computer via apt and python-apt.
