* DistUpgrade/DistUpgradeApport.py   - check errormsg for the English version of the dependency problems error     first (LP: #999890)

--- a/debian/changelog
+++ b/debian/changelog
@@ -40,7 +40,12 @@ update-manager (1:0.160) UNRELEASED; urgency=low
   * DistUpgrade/*.py:
     - update for the 12.04 -> 12.10 upgrade
 
- -- Colin Watson <cjwatson@ubuntu.com>  Tue, 01 May 2012 01:28:03 +0100
+  [ Brian Murray ]
+  * DistUpgrade/DistUpgradeApport.py
+    - check errormsg for the English version of the dependency problems error
+      first (LP: #999890)
+
+ -- Brian Murray <brian@ubuntu.com>  Wed, 16 May 2012 13:59:05 -0700
 
 update-manager (1:0.156.14.1) precise-proposed; urgency=low
 
