* lp:~ember/update-manager/ubuntu.bug1002956:   - fix missing ReleaseNotesViewerWebkit.py support, thanks to     Pedro Fragoso (LP: #1002956)

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,8 @@
 update-manager (1:0.156.14.5) UNRELEASED; urgency=low
 
-  * 
+  * lp:~ember/update-manager/ubuntu.bug1002956:
+    - fix missing ReleaseNotesViewerWebkit.py support, thanks to
+      Pedro Fragoso (LP: #1002956)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Wed, 23 May 2012 11:26:59 +0200
 
