Ignore __pycache__ directories, and exclude them from dist-upgrader tarballs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ update-manager (1:0.160) UNRELEASED; urgency=low
     since it's almost just as easy to call gpg directly via subprocess, do
     so.
   * Use gettext if ugettext does not exist (as in Python 3).
+  * Ignore __pycache__ directories, and exclude them from dist-upgrader
+    tarballs.
   
   [ Michael Vogt ]
   * DistUpgrade/*.py:
