Fix up module path when running AutoUpgradeTester/auto-install-tester.py from the build tree.

--- a/debian/changelog
+++ b/debian/changelog
@@ -37,7 +37,9 @@ update-manager (1:0.160) UNRELEASED; urgency=low
   * Use gettext if ugettext does not exist (as in Python 3).
   * Ignore __pycache__ directories, and exclude them from dist-upgrader
     tarballs.
-  
+  * Fix up module path when running AutoUpgradeTester/auto-install-tester.py
+    from the build tree.
+
   [ Michael Vogt ]
   * DistUpgrade/*.py:
     - update for the 12.04 -> 12.10 upgrade
