Add a DistUpgrade -> . symlink in DistUpgrade/, to make it possible to have compatible imports both in update-manager proper and in dist-upgrader tarballs.

--- a/debian/changelog
+++ b/debian/changelog
@@ -39,6 +39,9 @@ update-manager (1:0.160) UNRELEASED; urgency=low
     tarballs.
   * Fix up module path when running AutoUpgradeTester/auto-install-tester.py
     from the build tree.
+  * Add a DistUpgrade -> . symlink in DistUpgrade/, to make it possible to
+    have compatible imports both in update-manager proper and in
+    dist-upgrader tarballs.
 
   [ Michael Vogt ]
   * DistUpgrade/*.py:
