--- a/debian/changelog
+++ b/debian/changelog
@@ -45,6 +45,10 @@ update-manager (1:0.160) UNRELEASED; urgency=low
   * Use only absolute imports in AutoUpgradeTester/auto-install-tester.py
     and DistUpgrade/dist-upgrade.py; these have no __package__ and so cannot
     use relative imports.
+  * Open subprocesses with universal_newlines=True when expecting to read
+    text from them.  On Python 2, this only enables \r\n conversion and the
+    like, but on Python 3 this also causes subprocess-related file objects
+    to read str rather than bytes.
 
   [ Michael Vogt ]
   * DistUpgrade/*.py:
