--- a/debian/changelog
+++ b/debian/changelog
@@ -49,6 +49,7 @@ update-manager (1:0.160) UNRELEASED; urgency=low
     text from them.  On Python 2, this only enables \r\n conversion and the
     like, but on Python 3 this also causes subprocess-related file objects
     to read str rather than bytes.
+  * Use "key in dict" rather than "dict.has_key(key)".
 
   [ Michael Vogt ]
   * DistUpgrade/*.py:
