Pass globals() to __import__ so that relative imports work.

--- a/debian/changelog
+++ b/debian/changelog
@@ -50,6 +50,7 @@ update-manager (1:0.160) UNRELEASED; urgency=low
     like, but on Python 3 this also causes subprocess-related file objects
     to read str rather than bytes.
   * Use "key in dict" rather than "dict.has_key(key)".
+  * Pass globals() to __import__ so that relative imports work.
 
   [ Michael Vogt ]
   * DistUpgrade/*.py:
