DistUpgrade/DistUpgrade.cfg: update kernel version for precise->quantal, update changelog

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,9 @@ update-manager (1:0.160) UNRELEASED; urgency=low
   [ Michael Vogt ]
   * DistUpgrade/*.py:
     - update for the 12.04 -> 12.10 upgrade
+  * AutoUpgradeTester/profile/defaults.cfg.d/defaults.cfg:
+    - update for precise->quantal
+  * fix some remaining python-apt 0.8+ API issues
 
   [ Brian Murray ]
   * DistUpgrade/DistUpgradeApport.py
