--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-update-manager (1:0.160) UNRELEASED; urgency=low
+update-manager (1:0.160) quantal; urgency=low
 
   [ Colin Watson ]
   * Use Python 3-style print functions.
@@ -68,9 +68,9 @@ update-manager (1:0.160) UNRELEASED; urgency=low
   * Rename to Software Updater and fix some other strings to match mpt's
     spec.
   * lp:~mterry/update-manager/move-changelogs:
-    - implement new page layout
+    - implement new app layout
 
- -- Michael Terry <mterry@ubuntu.com>  Wed, 23 May 2012 10:10:15 -0400
+ -- Michael Vogt <michael.vogt@ubuntu.com>  Fri, 01 Jun 2012 17:48:54 +0200
 
 update-manager (1:0.156.14.5) UNRELEASED; urgency=low
 
