/usr/share/nvidia-common/obsolete was renamed to /usr/share/ubuntu-drivers-common/obsolete and moved packages.  Cope with this.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+update-manager (1:0.161) UNRELEASED; urgency=low
+
+  * /usr/share/nvidia-common/obsolete was renamed to
+    /usr/share/ubuntu-drivers-common/obsolete and moved packages.  Cope with
+    this.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Fri, 01 Jun 2012 20:51:20 +0100
+
 update-manager (1:0.160) quantal; urgency=low
 
   [ Colin Watson ]
