--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+ubuntu-release-upgrader (1:0.163) quantal; urgency=low
+
+  * Rename source package, split upgrade bits out of update-manager
+
+ -- Michael Terry <mterry@ubuntu.com>  Wed, 06 Jun 2012 17:28:27 -0400
+
 update-manager (1:0.162) quantal; urgency=low
 
   * DistUpgrade/build-tarball.sh:
