--- a/debian/changelog
+++ b/debian/changelog
@@ -5,6 +5,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     cases we have to check whether candidate/installed is non-None first.
   * Use apt_pkg.version_compare rather than apt_pkg.VersionCompare.
   * Use apt_pkg.uri_to_filename rather than apt_pkg.URItoFileName.
+  * Use apt_pkg.TagFile (and related new-style API) rather than
+    apt_pkg.ParseTagFile.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 10:52:39 +0100
 
