--- a/debian/changelog
+++ b/debian/changelog
@@ -7,6 +7,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use apt_pkg.uri_to_filename rather than apt_pkg.URItoFileName.
   * Use apt_pkg.TagFile (and related new-style API) rather than
     apt_pkg.ParseTagFile.
+  * Use apt_pkg.PackageManager rather than apt_pkg.GetPackageManager.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 10:52:39 +0100
 
