--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+update-manager (1:0.163) UNRELEASED; urgency=low
+
+  * Isolate tests from local configuration in
+    /etc/update-manager/release-upgrades.d/.
+
+ -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
+
 update-manager (1:0.162) quantal; urgency=low
 
   * DistUpgrade/build-tarball.sh:
