--- a/debian/changelog
+++ b/debian/changelog
@@ -13,6 +13,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use apt_pkg.Acquire rather than apt_pkg.GetAcquire.
   * Use mark_foo/marked_foo rather than markFoo/markedFoo.
   * Use apt_pkg.ActionGroup rather than apt_pkg.GetPkgActionGroup.
+  * Use apt_pkg.ProblemResolver rather than apt_pkg.GetPkgProblemResolver.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
