--- a/debian/changelog
+++ b/debian/changelog
@@ -14,6 +14,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use mark_foo/marked_foo rather than markFoo/markedFoo.
   * Use apt_pkg.ActionGroup rather than apt_pkg.GetPkgActionGroup.
   * Use apt_pkg.ProblemResolver rather than apt_pkg.GetPkgProblemResolver.
+  * Use apt_pkg.read_config_file rather than apt_pkg.ReadConfigFile.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
