--- a/debian/changelog
+++ b/debian/changelog
@@ -16,6 +16,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use apt_pkg.ProblemResolver rather than apt_pkg.GetPkgProblemResolver.
   * Use apt_pkg.read_config_file rather than apt_pkg.ReadConfigFile.
   * Use new spelling of apt_pkg.DepCache methods.
+  * Rename several local cache methods to PEP-8 style to avoid showing up in
+    the output of /usr/share/python-apt/migrate-0.8.py.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
