--- a/debian/changelog
+++ b/debian/changelog
@@ -18,6 +18,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use new spelling of apt_pkg.DepCache methods.
   * Rename several local cache methods to PEP-8 style to avoid showing up in
     the output of /usr/share/python-apt/migrate-0.8.py.
+  * Use apt_pkg.size_to_str rather than apt_pkg.SizeToStr.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
