Use apt_pkg.PackageManager.get_archives rather than apt_pkg.PackageManager.GetArchives.

--- a/debian/changelog
+++ b/debian/changelog
@@ -19,6 +19,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Rename several local cache methods to PEP-8 style to avoid showing up in
     the output of /usr/share/python-apt/migrate-0.8.py.
   * Use apt_pkg.size_to_str rather than apt_pkg.SizeToStr.
+  * Use apt_pkg.PackageManager.get_archives rather than
+    apt_pkg.PackageManager.GetArchives.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
