Use apt_pkg.Acquire.fetch_needed rather than apt_pkg.Acquire.FetchNeeded.

--- a/debian/changelog
+++ b/debian/changelog
@@ -21,6 +21,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use apt_pkg.size_to_str rather than apt_pkg.SizeToStr.
   * Use apt_pkg.PackageManager.get_archives rather than
     apt_pkg.PackageManager.GetArchives.
+  * Use apt_pkg.Acquire.fetch_needed rather than
+    apt_pkg.Acquire.FetchNeeded.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
