--- a/debian/changelog
+++ b/debian/changelog
@@ -23,6 +23,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     apt_pkg.PackageManager.GetArchives.
   * Use apt_pkg.Acquire.fetch_needed rather than
     apt_pkg.Acquire.FetchNeeded.
+  * Use new spelling of apt_pkg.Package/Version/Dependency methods.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
