Use apt_pkg.pkgsystem_lock rather than apt_pkg.PkgSystemLock.

--- a/debian/changelog
+++ b/debian/changelog
@@ -24,6 +24,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use apt_pkg.Acquire.fetch_needed rather than
     apt_pkg.Acquire.FetchNeeded.
   * Use new spelling of apt_pkg.Package/Version/Dependency methods.
+  * Use apt_pkg.pkgsystem_lock rather than apt_pkg.PkgSystemLock.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
