Use new spelling of apt_pkg dependency parsing methods.

--- a/debian/changelog
+++ b/debian/changelog
@@ -25,6 +25,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     apt_pkg.Acquire.FetchNeeded.
   * Use new spelling of apt_pkg.Package/Version/Dependency methods.
   * Use apt_pkg.pkgsystem_lock rather than apt_pkg.PkgSystemLock.
+  * Use new spelling of apt_pkg dependency parsing methods.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
