--- a/debian/changelog
+++ b/debian/changelog
@@ -27,6 +27,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use apt_pkg.pkgsystem_lock rather than apt_pkg.PkgSystemLock.
   * Use new spelling of apt_pkg dependency parsing methods.
   * Use new spelling of apt_pkg.SourceList methods.
+  * Bump python-apt (build-)dependency to >= 0.8.0.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
