Switch default view class to Gtk3 and replace python-gobject dependency with python-gi.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
 
   * Isolate tests from local configuration in
     /etc/update-manager/release-upgrades.d/.
+  * Switch default view class to Gtk3 and replace python-gobject dependency
+    with python-gi.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
