--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
 
   * Isolate tests from local configuration in
     /etc/update-manager/release-upgrades.d/.
+  * Use Python attributes rather than GObject.get_data and GObject.set_data,
+    which have been removed upstream (LP: #1009859).
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
