Fix DistUpgradeAptCdrom to account for gzip files being opened in binary mode.

--- a/debian/changelog
+++ b/debian/changelog
@@ -34,6 +34,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use new spelling of apt_pkg.SourceList methods.
   * Bump python-apt (build-)dependency to >= 0.8.0.
   * Always pass bytes to hashlib.md5.update.
+  * Fix DistUpgradeAptCdrom to account for gzip files being opened in binary
+    mode.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
