Add a scheme for excluding false positives from the pyflakes test, and enable it by default.

--- a/debian/changelog
+++ b/debian/changelog
@@ -33,6 +33,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Use new spelling of apt_pkg dependency parsing methods.
   * Use new spelling of apt_pkg.SourceList methods.
   * Bump python-apt (build-)dependency to >= 0.8.0.
+  * Add a scheme for excluding false positives from the pyflakes test, and
+    enable it by default.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
