* UpdateManager/GtkProgress.py:   - fix python-apt 0.8 API crash

--- a/debian/changelog
+++ b/debian/changelog
@@ -46,6 +46,10 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     removed from here into its own separate branch.
   * Merge the temporary Python 3 sprint branch back into trunk, and close
     the py3 sprint branch.
+  
+  [ Michael Vogt ]
+  * UpdateManager/GtkProgress.py:
+    - fix python-apt 0.8 API crash
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
