Rearrange the OptionParser workaround from 1:0.154.5 to work with Python 3, using gettext or ugettext as appropriate.

--- a/debian/changelog
+++ b/debian/changelog
@@ -35,6 +35,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Bump python-apt (build-)dependency to >= 0.8.0.
   * Add a scheme for excluding false positives from the pyflakes test, and
     enable it by default.
+  * Rearrange the OptionParser workaround from 1:0.154.5 to work with Python
+    3, using gettext or ugettext as appropriate.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
