sort(cmp=) and sorted(cmp=) no longer work in Python 3.  Use appropriate key= arguments instead.

--- a/debian/changelog
+++ b/debian/changelog
@@ -47,6 +47,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     - Keep a reference to the data tuple passed to GObject.child_watch_add
       to avoid attempts to destroy it without a thread context
       (LP: #724687).
+  * sort(cmp=) and sorted(cmp=) no longer work in Python 3.  Use appropriate
+    key= arguments instead.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
