Define __bool__ rather than __nonzero__ method in Python 3.

--- a/debian/changelog
+++ b/debian/changelog
@@ -48,6 +48,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
       to avoid attempts to destroy it without a thread context
       (LP: #724687).
     - Open temporary synaptic selections file in text mode.
+  * Define __bool__ rather than __nonzero__ method in Python 3.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
