--- a/debian/changelog
+++ b/debian/changelog
@@ -68,6 +68,10 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * UpdateManager/GtkProgress.py:
     - fix python-apt 0.8 API crash
 
+  [ Stéphane Graber ]
+  * Drop fdsend as it's not used and doesn't build with python3.
+  * Make update-manager-core a binary all packages (everything is python).
+
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
 update-manager (1:0.162) quantal; urgency=low
