Split the python modules out of update-manager-core and build both python2 and python3 versions of them

--- a/debian/changelog
+++ b/debian/changelog
@@ -71,6 +71,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   [ Stéphane Graber ]
   * Drop fdsend as it's not used and doesn't build with python3.
   * Make update-manager-core a binary all packages (everything is python).
+  * Split update-manager-core into python-update-manager,
+    python3-update-manager and update-manager-core.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
