Update version dependency of python-apt and python3-apt

--- a/debian/changelog
+++ b/debian/changelog
@@ -73,6 +73,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Make update-manager-core a binary all packages (everything is python).
   * Split update-manager-core into python-update-manager,
     python3-update-manager and update-manager-core.
+  * Build-depend and depend on python-apt >= 0.8.5~ as we need proper
+    python3 support.
 
  -- Colin Watson <cjwatson@ubuntu.com>  Mon, 11 Jun 2012 11:46:37 +0100
 
