Make update-manager-kde depend on psmisc, for killall.

--- a/debian/changelog
+++ b/debian/changelog
@@ -52,6 +52,7 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * sort(cmp=) and sorted(cmp=) no longer work in Python 3.  Use appropriate
     key= arguments instead.
   * Fix ResourceWarning while reading /proc/mounts.
+  * Make update-manager-kde depend on psmisc, for killall.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
