* DistUpgrade/DistUpgradeViewText.py:   - Flush stdout after printing confirmation message, since it doesn't     have a trailing newline.

--- a/debian/changelog
+++ b/debian/changelog
@@ -55,6 +55,9 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * Make update-manager-kde depend on psmisc, for killall.
   * DistUpgrade/DistUpgradeView.py:
     - Use floor division in FuzzyTimeToStr.
+  * DistUpgrade/DistUpgradeViewText.py:
+    - Flush stdout after printing confirmation message, since it doesn't
+      have a trailing newline.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
