Use the appropriate Unicode gettext methods in both Python 2 and 3, and drop lots of Python-3-unfriendly Unicode mangling as a result.

--- a/debian/changelog
+++ b/debian/changelog
@@ -58,6 +58,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
   * DistUpgrade/DistUpgradeViewText.py:
     - Flush stdout after printing confirmation message, since it doesn't
       have a trailing newline.
+  * Use the appropriate Unicode gettext methods in both Python 2 and 3, and
+    drop lots of Python-3-unfriendly Unicode mangling as a result.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
