--- a/debian/changelog
+++ b/debian/changelog
@@ -60,6 +60,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
       have a trailing newline.
   * Use the appropriate Unicode gettext methods in both Python 2 and 3, and
     drop lots of Python-3-unfriendly Unicode mangling as a result.
+  * DistUpgrade/DistUpgradeViewKDE.py:
+    - Open the terminal log in binary mode.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
