* data/do-release-upgrade.8:   - Provide a more useful NAME section.

--- a/debian/changelog
+++ b/debian/changelog
@@ -62,6 +62,8 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     drop lots of Python-3-unfriendly Unicode mangling as a result.
   * DistUpgrade/DistUpgradeViewKDE.py:
     - Open the terminal log in binary mode.
+  * data/do-release-upgrade.8:
+    - Provide a more useful NAME section.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
