* DistUpgrade/DistUpgradeCache.py:   - Tolerate SyntaxError from attempting to import NvidiaDetector, until     such time as a complete ubuntu-drivers-common Python 3 port is in the     archive.

--- a/debian/changelog
+++ b/debian/changelog
@@ -64,6 +64,10 @@ update-manager (1:0.163) UNRELEASED; urgency=low
     - Open the terminal log in binary mode.
   * data/do-release-upgrade.8:
     - Provide a more useful NAME section.
+  * DistUpgrade/DistUpgradeCache.py:
+    - Tolerate SyntaxError from attempting to import NvidiaDetector, until
+      such time as a complete ubuntu-drivers-common Python 3 port is in the
+      archive.
 
   [ Adam Conrad ]
   * Merge branch from Michael Terry to drop auto-upgrade-tester
